# SCARA_projekt

./: .gitignore  README.md
projekt/: CMakeLists.txt  package.xml
projekt/config/: gz_bridge.yaml
projekt/datasets/scara_cubes/: data.yaml
projekt/datasets/scara_cubes/labels/train/: existing_train_steel_cube_steel_cube_20260526_151508_333817_0001_0001.txt  existing_train_steel_cube_steel_cube_20260526_151513_134362_0002_0002.txt  existing_train_steel_cube_steel_cube_20260526_151515_413840_0003_0003.txt  existing_train_steel_cube_steel_cube_20260526_151518_504163_0004_0004.txt  existing_train_steel_cube_steel_cube_20260526_151521_986021_0005_0005.txt  existing_train_steel_cube_steel_cube_20260526_151525_943646_0006_0006.txt  existing_train_steel_cube_steel_cube_20260526_151532_636017_0007_0007.txt  existing_train_steel_cube_steel_cube_20260526_151604_253570_0012_0008.txt  existing_train_steel_cube_steel_cube_20260526_151609_803572_0013_0009.txt  existing_train_steel_cube_steel_cube_20260526_151613_223625_0014_0010.txt  existing_train_steel_cube_steel_cube_20260526_151616_104096_0015_0011.txt  existing_train_steel_cube_steel_cube_20260526_151625_973905_0018_0012.txt  existing_train_steel_cube_steel_cube_20260526_151629_606809_0019_0013.txt  existing_train_steel_cube_steel_cube_20260526_151646_943976_0020_0014.txt  existing_train_steel_cube_steel_cube_20260526_151651_444852_0021_0015.txt  existing_train_steel_cube_steel_cube_20260526_151654_987069_0022_0016.txt  existing_train_steel_cube_steel_cube_20260526_151659_693915_0023_0017.txt  existing_train_steel_cube_steel_cube_20260526_151703_085914_0024_0018.txt  existing_train_steel_cube_steel_cube_20260526_151705_393842_0025_0019.txt  existing_train_steel_cube_steel_cube_20260526_151729_724416_0028_0020.txt  existing_train_steel_cube_steel_cube_20260526_151732_693384_0029_0021.txt  existing_train_steel_cube_steel_cube_20260526_151742_894286_0030_0022.txt  existing_train_steel_cube_steel_cube_20260526_151747_093894_0031_0023.txt  existing_train_steel_cube_steel_cube_20260526_151752_883792_0032_0024.txt  existing_train_steel_cube_steel_cube_20260526_151758_674114_0033_0025.txt  existing_train_steel_cube_steel_cube_20260526_151810_404604_0036_0026.txt  existing_train_steel_cube_steel_cube_20260526_151818_233670_0037_0027.txt  existing_train_steel_cube_steel_cube_20260526_151845_984772_0038_0028.txt  existing_train_steel_cube_steel_cube_20260526_151851_714850_0039_0029.txt  existing_train_steel_cube_steel_cube_20260526_151854_473666_0040_0030.txt  existing_train_steel_cube_steel_cube_20260526_151857_953700_0041_0031.txt  existing_train_steel_cube_steel_cube_20260526_151901_014154_0042_0032.txt  existing_train_steel_cube_steel_cube_20260526_151904_133460_0043_0033.txt  existing_train_steel_cube_steel_cube_20260526_151908_994276_0044_0034.txt  existing_train_steel_cube_steel_cube_20260526_151929_875954_0047_0035.txt  existing_train_steel_cube_steel_cube_20260526_151933_593440_0048_0036.txt  existing_train_steel_cube_steel_cube_20260526_151936_233563_0049_0037.txt  existing_train_steel_cube_steel_cube_20260526_151940_104598_0050_0038.txt  existing_train_wood_cube_wood_cube_20260526_152027_025474_0004_0001.txt  existing_train_wood_cube_wood_cube_20260526_152028_974340_0005_0002.txt  (+33 more)
projekt/datasets/scara_cubes/labels/val/: existing_val_steel_cube_steel_cube_20260526_151550_934265_0008_0001.txt  (+26 more)
projekt/launch/: sorting_demo.launch.py  spawn_robot.launch.py  start_sorting.launch.py  world.launch.py
projekt/meshes/steel_collection_bin/: model.sdf
projekt/meshes/steel_cube_5cm/: model.config  model.rsdf  model.sdf  steel_cube_5cm.mtl
projekt/meshes/wood_collection_bin/: model.config
projekt/meshes/wood_cube_5cm/: model.sdf
projekt/msg/: PixelDetection.msg  PixelDetectionArray.msg
projekt/runs/detect/train/: args.yaml
projekt/runs/detect/train-2/: args.yaml
projekt/runs/detect/train-3/: args.yaml  results.csv
projekt/rviz/: rviz.rviz  urdf.rviz
projekt/scripts/: attach_detach_controller.py  controller_state_to_joint_states.py  save_training_images.py  scara_sorter.py  static_pixel_detection_publisher.py  yolo_cube_detector.py
projekt/test/: test_scara_sorter_math.py
projekt/training_images/: README.md
projekt/urdf/: scara.gazebo  scara.urdf
projekt/worlds/: world.sdf
(+30 files in other folders)
