<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>projekt</name>
  <version>1.0.0</version>
  <description>
    Scara projekt for ROS2. This package includes URDF models, RViz configurations, and launch files for visualizing and simulating a SCARA robot. It serves as a template for creating and testing robotic models in ROS2, providing a foundation for further development and experimentation.
  </description>
  <maintainer email="vesz.zsombor@gmail.com">Zsombor Veszpremi</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
